[package]
authors = [
  "Axel Sundbom <axel.sundbom@grepit.se>",
  "Henrik Tjäder <henrik@grepit.se>"
]
categories = ["concurrency", "embedded", "no-std", "lpc1347", "rtfm"]
description = "RTFMv3 Support Crate for LPC1347"
documentation = ""
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "lpc1347_rtfm3"
repository = "https://github.com/ax-rwnd/lpc1347-rtfm3.git"
version = "0.2.1"

[dependencies]
cortex-m = "0.5.0"
cortex-m-semihosting = "0.3.0"
cortex-m-rtfm = "0.3.0"
rtfm-core = "0.2.0"
untagged-option = "0.1.1"
panic-abort = "0.2.0"

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
compiletest_rs = "0.3.5"

# Used for the entry!/exception!
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.6.0"

[dependencies.lpc1347]
features = ["rt"]
version = "0.2.0"
git = "https://github.com/ax-rwnd/rust-lpc1347.git"

[features]
cm7-r0p1 = ["cortex-m/cm7-r0p1"]

[profile.dev]
codegen-units = 1

[profile.release]
lto = true
debug = true
